# $Id$
#
# This file is intended to be processed by automake

AUTOMAKE_OPTIONS=foreign dist-zip

EXTRA_DIST= \
	MANUAL.TXT TECHINFO.TXT client-notes.txt docs.txt \
	glqwcl-readme.txt move.txt newnet.txt qw2do.txt qwchangelog.txt \
	qwcl-readme.txt qwexit.txt qwrlnote.txt release233_notes.txt \
	server-notes.txt

