# $Id$
#
# This file is intended to be processed by automake

AUTOMAKE_OPTIONS=gnu dist-zip

noinst_HEADERS= \
	anorm_dots.h anorms.h bspfile.h common.h compat.h config.h \
	crc.h cvar.h draw.h gl_warp_sin.h host.h input.h mathlib.h \
	mdfour.h menu.h model.h modelgen.h pcx.h pmove.h pr_comp.h qtypes.h  \
	quakedef.h sbar.h spritegn.h strlib.h sys.h tga.h vid.h view.h wad.h \
	win32conf.h zone.h
