# $Id$
#
# This file is intended to be processed by automake

AUTOMAKE_OPTIONS=foreign dist-zip

noinst_HEADERS= \
	anorm_dots.h anorms.h bspfile.h cmd.h collision.h common.h \
	cpu.h crc.h cvar.h gl_warp_sin.h host.h info.h \
	input.h lh_parser.h locs.h mathlib.h matrixlib.h mdfour.h \
	menu.h mod_brush.h model.h modelgen.h pmove.h pr_comp.h qtypes.h \
	quakedef.h r_explosion.h spritegn.h strlib.h sys.h \
	twiconfig.h view.h wad.h zone.h
