# $Id$
#
# This file is intended to be processed by automake

AUTOMAKE_OPTIONS=gnu dist-zip

CFLAGS=@CFLAGS@

noinst_LIBRARIES=libjpeg.a

noinst_HEADERS= \
	jchuff.h jconfig.h jdct.h jdhuff.h jerror.h jinclude.h \
	jmemsys.h jmorecfg.h jpegint.h jpeglib.h jversion.h

libjpeg_a_SOURCES= \
	jcapimin.c jcapistd.c jccoefct.c jccolor.c jcdctmgr.c jchuff.c \
	jcinit.c jcmainct.c jcmarker.c jcmaster.c jcomapi.c jcparam.c \
	jcphuff.c jcprepct.c jcsample.c jctrans.c jdapimin.c jdapistd.c \
	jdatadst.c jdatasrc.c jdcoefct.c jdcolor.c jddctmgr.c jdhuff.c \
	jdinput.c jdmainct.c jdmarker.c jdmaster.c jdmerge.c jdphuff.c \
	jdpostct.c jdsample.c jdtrans.c jerror.c jfdctflt.c jfdctfst.c \
	jfdctint.c jidctflt.c jidctfst.c jidctint.c jidctred.c jmemansi.c \
	jmemmgr.c jquant1.c jquant2.c jutils.c
