# $Id$
#
# This file is intended to be processed by automake

AUTOMAKE_OPTIONS=gnu dist-zip

CFLAGS=@CFLAGS@

noinst_LIBRARIES=libpng.a

noinst_HEADERS= \
	png.h pngconf.h

libpng_a_SOURCES= \
	png.c pngerror.c pngget.c pngmem.c pngpread.c pngrio.c pngrtran.c \
	pngrutil.c pngset.c pngtrans.c pngwio.c pngwrite.c pngwtran.c \
	pngwutil.c

#	example.c
#	pnggccrd.c
#	pngtest.c
#	pngvcrd.c
